ajustes finais no hero

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -2,7 +2,7 @@
 @use 'variaveis';
 
 .header {
-    padding: 1vw 5.6vw;
+    padding: 0vw 5.6vw;
     background-color: variaveis.$corDeFundoHeader;
     
     &__content {
@@ -12,7 +12,7 @@
     &__links {
         display: flex;
         justify-content: space-around;
-        padding: 1vw 18vw 0 18vw;
+        padding: 1vw 18vw 1vw 18vw;
         &__item{
             a {
                 text-decoration: none;
