--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,7 +1,7 @@
 @use 'variaveis';
 
 .hero {
-    height: 90vh; // 80% da área visível
+    height: 90vh;
     text-align: center;
     background-color: variaveis.$corDeFundoHero;
     position: relative; // Necessário para posicionar o corte 
@@ -9,11 +9,9 @@
     overflow: hidden; // Previne o overflow do conteúdo
 
     @media (max-width: 768px) {
-        background-image: url(../images/hero_celular.jpeg);
-        padding-top: calc(50vw + 25px);
         background-size: contain;
         background-repeat: no-repeat;
-        margin-top: -55px;
+        height: 65vh;
     }
 
     .title--small {
@@ -34,19 +32,18 @@
     &__container {
         display: flex;
         position: relative; // Para garantir que o overflow da imagem seja controlado no container
-        
         &__content {
             width: 40%;
-            padding: 10vw 0 10vw 6vw;
+            padding: 12vw 0 5.6vw 6vw;
             &__branding {
                 width: 100%;
                 img {
                     width: 90%;
                 }
 
-                @media (max-width: 768px) {
-                    max-width: 180px;
-                }
+                // @media (max-width: 768px) {
+                //     max-width: 180px;
+                // }
             }
 
             .title--small {
@@ -66,7 +63,10 @@
                 justify-content: space-between;
 
                 @media (max-width: 768px) {
-                    display: block;
+                    width: 100%;
+                    .button {
+                        font-size: 12px;
+                    }
                 }
 
                 &__combo {
