--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -38,9 +38,8 @@
         padding: 150px 0 12px 0;
 
         @media (max-width: 768px) {
-            white-space: nowrap;
-            overflow-x: scroll;
-            padding-left: 20px;
+            padding: 80px 0 12px 0;
+            
         }
 
         &__button{
